kubenetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyfastapi-deployment
  labels:
    app: tinyfastapi
spec:
  selector:
    app: tinyfastapi
  type: NodePort
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      nodePort: 30010
