kubenetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyfastapi-ingress
spec:
  rules:
  - host: tinyfastapi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tinyfastapi-service
            port:
              number: 8002
